refact: fixed alignment of document upload

--- a/src/app/components/incident-create-form-component/incident-create-form-component.component.css
+++ b/src/app/components/incident-create-form-component/incident-create-form-component.component.css
@@ -14,6 +14,16 @@
     font-size: 1.5em;
     color: #333;
   }
+
+  .pi{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .upload-text{
+    text-align: center;
+  }
   
   .p-field {
     margin-bottom: 1rem;
